--- a/client/src/components/Projects/ProjectManagement.css
+++ b/client/src/components/Projects/ProjectManagement.css
@@ -2,7 +2,9 @@
 .pm-container {
   max-width: 960px;
   margin: 0 auto;
+  min-width: 0;
   padding: 1.25rem 1rem;
+  padding-top: calc(64px + 1.25rem);
 }
 
 .pm-page-header {
